# inkpaper

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
demo/: app.py
scripts/: check_release.py  smoke_install.py
src/inkpaper/: __init__.py  inkpaper.css  theme.py
tests/: __init__.py  test_css.py  test_demo.py  test_docs.py  test_launch.py  test_metadata.py  test_package.py  test_release.py  test_smoke_install.py  test_theme.py  test_workflows.py
