[project]
name = "inkpaper"
version = "0.1.1"
description = "An always-dark Gradio theme with monospace type, ink-black surfaces, paper-white text, and slate accents."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Ron Edgecomb" },
]
keywords = ["gradio", "theme", "dark-theme", "monospace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "gradio>=6.20,<7",
]

[project.urls]
Homepage = "https://github.com/ronedgecomb/inkpaper"
Repository = "https://github.com/ronedgecomb/inkpaper"
Issues = "https://github.com/ronedgecomb/inkpaper/issues"
Changelog = "https://github.com/ronedgecomb/inkpaper/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "check-wheel-contents>=0.6,<1",
    "pytest>=8",
    "pyyaml>=6,<7",
    "ruff>=0.15.22",
    "tomli>=2,<3; python_version < '3.11'",
    "twine>=6,<7",
]

[build-system]
requires = ["uv_build>=0.11.30,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
